contrast issues fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -185,8 +185,8 @@ figure {
   }
 
 figcaption {
-    background-color:#6883ba;
-    color: #fff;
+    background-color:#86aaf2;
+    color: #000000;
     font: italic smaller sans-serif;
     padding: 3px;
     text-align: center;
